# acos

./: .gitignore  README.md
PYCompiler/: Makefile  main.c
SandboxForArmAssembly/: CMakeLists.txt  asm.s  main.s  makefile
asm-arm_codegen_compileexpr-1/: CMakeLists.txt  input.txt  jit_compile_arm.cpp  makefile  test.c  tests.cpp  tests.h
asm-x86_fpu-sse_fpu-sse-intro/: CMakeLists.txt  asm.S  main.c
asm-x86_fpu-sse_trig-macloren-series/: CMakeLists.txt  asm.s  main.c
bitset-calc/: CMakeLists.txt  main.c
eqsolution/: CMakeLists.txt  main.s
expression/: main.s
generic-ieee754-classify/: CMakeLists.txt  main.c
generic-sum-numbers/: CMakeLists.txt  main.c
globalvars/: CMakeLists.txt  main.s
hello-arm/: hello  main.c  makefile
inf04-1-asm-arm_format_io/: README.md  main  main.S
inf04-2-asm-arm_basics_char-filter-digits/: CMakeLists.txt  main  main.S  run.sh
inf04-3-asm-arm_basics_reverse-print-chars/: CMakeLists.txt  main  main.S  test.sh
inf05-0-asm-x86_basics/: CMakeLists.txt  main.S
inf05-1-asm-x86_arrays/: CMakeLists.txt  asm.S  main.c
inf05-2: asm-x86_mergesort/: CMakeLists.txt  asm.S  main.c  main.s
inf06-2_asm-x86_fpu-sse_vector-dot-product/: CMakeLists.txt  asm.s  main.c
inf06-3-generic_sse-matrix-mul/: CMakeLists.txt  input.txt  main.c
inf06-4_generic_sse-blend-images/: CMakeLists.txt  main.c
inf07-0_posix_syscalls_hello-world/: CMakeLists.txt  main.c
inf07-1_posix_syscalls_copy-stream/: CMakeLists.txt  main.c  main.s
inf07-2_asm-x86_syscalls_copy-stream/: CMakeLists.txt  main.S
inf07-3_asm-x86_syscalls_reverse-print-lines/: CMakeLists.txt  input.txt  main.c  main.s
inf08-0_files-io_read-filter-write/: CMakeLists.txt  input.txt  main.c  stuff.txt
inf08-1_files-io_print-list-posix/: CMakeLists.txt  main.c
inf08-2_files-io_sort-file-contents/: CMakeLists.txt  file  gen.py  main.c  read.py
inf08-3_files-io_print-list-winapi/: CMakeLists.txt  main.c
inf09-0_c_texts_normalize-path/: CMakeLists.txt  main.c
inf09-1-posix_filesystem_file-list-summ-size/: CMakeLists.txt  main.c
inf09-2_posix_filesystem_find-invalid-executables/: CMakeLists.txt  file3  file4  main.c
inf09-3-posix_filesystem_manage-symlinks/: CMakeLists.txt  file  main.c
inf10-0_posix_mmap_find-substrings-in-file/: CMakeLists.txt  file  main.c
inf10-1_posix_mmap_print-list-using-mmap/: CMakeLists.txt  main.c
inf10-2_posix_mmap_make-spiral-file/: CMakeLists.txt  main.c  matrix  out.txt
inf10-3-posix_mmap_swap-file-mem-allocator/: CMakeLists.txt  main.c
inf11-0_posix_fork_test-proc-limit/: CMakeLists.txt  main.c
inf11-1-posix_fork_proc-print-numbers/: CMakeLists.txt  main.c
inf11-2_posix_fork_proc-count-words/: CMakeLists.txt  main.c
inf12-0-posix_exec_exec-python/: CMakeLists.txt  main.c
inf12-1_posix_exec_exec-gcc/: CMakeLists.txt  main.c  print_expr.c
inf23-2_http_curl-client/: CMakeLists.txt  main.c
inf24-0_fuse_simplefs/: CMakeLists.txt  main.c
inf24-1_fuse_mergefs/: CMakeLists.txt  main.c
inf25-0-openssl_dgst-sha512/: CMakeLists.txt  file  main.c
inf25-1_openssl_decrypt-aes-256-cbc/: CMakeLists.txt  main.c
memaccess/: main.c  (+4 more)
(+103 files in other folders)
